syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  int64 user_id = 1;
  int64 chat_id = 2;
  string order_text = 3;
}

message OrderResponse {
  bool success = 1;
}
